--- a/assets/stylesheet/application.css
+++ b/assets/stylesheet/application.css
@@ -41,6 +41,8 @@ p.comp_s {
 p.comp_sh {
   color: #757575;
   font-size: 13px;
+  display:inline-block;
+  text-align:left;
 }
 
 ul.browser-default {
