--- a/assets/stylesheet/application.css
+++ b/assets/stylesheet/application.css
@@ -2,12 +2,21 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  font-family: 'Roboto', 'Noto Sans JP', sans-serif;
 }
 
 main {
   flex: 1 0 auto;
+  
 }
 
+code {
+  font-family: 'Roboto Mono', monospace;
+}
+
+p, ul, li {
+  font-size: 17px;
+}
 
 h2.name_s {
   margin-top: 1rem;
@@ -41,8 +50,8 @@ p.comp_s {
 p.comp_sh {
   color: #757575;
   font-size: 13px;
-  display:inline-block;
-  text-align:left;
+  display: inline-block;
+  text-align: left;
 }
 
 ul.browser-default {
@@ -75,16 +84,6 @@ ul.browser-default li {
 
 .btn {
   margin-left: 10px;
-}
-
-:not(pre)>code[class*="language-"] {
-  border-radius: 0.3em;
-  padding: 0.1em;
-}
-
-:not(pre)>code[class*="language-"],
-pre[class*="language-"] {
-  background: #f5f2f0 none repeat scroll 0 0;
 }
 
 .toc {
@@ -139,4 +138,21 @@ pre[class*="language-"] {
 
 .content-width td {
   width: 150px;
+}
+
+h2.post_title {
+  margin: 0px;
+  text-decoration: none;
+}
+
+div.excerpt {
+  font-size: 14px;
+  color: #666;
+  margin-top: 1em;
+}
+
+.chip{
+	width: auto;
+	height: auto;
+	font-size: 12px;
 }
